test version stamp #GITBUILD

--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -837,6 +837,7 @@
                     </StackPanel>
 
                     <!-- links-->
+                    <Label x:Name="lblVersion" Grid.Row="4" Foreground="{DynamicResource ThemeButtonForeground}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,114,10" Content="" HorizontalContentAlignment="Right"/>
                     <Button Grid.Row="4" Style="{StaticResource CustomButton}" x:Name="btnOpenGithub" Margin="0,0,15,10" BorderBrush="{x:Null}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="BtnOpenGithub_Click">
                         <Label Content="View in Github" Foreground="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Control}}}" />
                     </Button>
