--- a/UnityLauncherPro/MainWindow.xaml
+++ b/UnityLauncherPro/MainWindow.xaml
@@ -485,7 +485,7 @@
                                 <MenuItem x:Name="menuItemUpdatesReleaseNotes" Header="Open Release Notes" Click="MenuItemUpdatesReleaseNotes_Click" />
                             </ContextMenu>
                         </DataGrid.ContextMenu>
-                        <local:Updates ReleaseDate="2020-10-10" Version="5000.1.2.3"/>
+                        <local:UnityVersion ReleaseDate="2020-10-10" Version="5000.1.2.3"/>
 
                         <!-- sample data for testing -->
                     </DataGrid>
