--- a/UnityLauncherPro/Resources/Colors.xaml
+++ b/UnityLauncherPro/Resources/Colors.xaml
@@ -66,5 +66,10 @@
     <SolidColorBrush x:Key="ThemeSystemHighlight" Color="#FF0078D7"/>
     <!--<SolidColorBrush x:Key="ThemeButtonWhiteText" Color="#FFFFFFFF"/>-->
     <SolidColorBrush x:Key="ThemeBrightText" Color="#FFFFFFFF"/>
+    
+    <!--messages-->
+    <!--<SolidColorBrush x:Key="ThemeMessageInfo" Color="#FF1E1E1E"/>-->
+    <SolidColorBrush x:Key="ThemeMessageWarning" Color="#FFFF5200"/>
+    <SolidColorBrush x:Key="ThemeMessageError" Color="Red"/>
 
 </ResourceDictionary>
